draft-packages/title-block-zen/KaizenDraft/TitleBlockZen/TitleBlockZen.scss
@import "~@kaizen/design-tokens/sass/color";
@import "~@kaizen/design-tokens/sass/typography";
@import "~@kaizen/design-tokens/sass/layout";
@import "~@kaizen/component-library/styles/grid";
@import "~@kaizen/component-library/styles/layers";
@import "~@kaizen/component-library/styles/layout";
@import "./TitleBlockBreakpoints.scss";

$title-block-margin-width-on-medium-and-small: 12px;
$breadcrumb-circle-width: 48px;
$breadcrumb-breakpoint-width: $kz-layout-content-max-width +
  $kz-layout-content-side-margin * 2 + $breadcrumb-circle-width * 2.25;
$title-block-separator-height: 3px;
$tab-container-height-default: $ca-grid * 3;
$tab-container-height-small: $ca-grid * 2.5;

.titleBlock {
  position: relative;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: $kz-color-wisteria-700;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;

  &.educationVariant {
    background-color: $kz-color-cluny-200;
  }

  &.adminVariant {
    background-color: $kz-color-stone;
  }

  @media print {
    display: none;
  }
}

.titleRow,
.rowBelowSeparator {
  display: flex;
  width: 100%;
  justify-content: center;
}

.adminVariant .titleRow {
  background-color: $kz-color-white;
}

%titleBlockInner {
  max-width: $kz-layout-content-max-width;
  margin: 0 $kz-layout-content-side-margin;
  display: flex;
  flex-direction: column;
  width: 100%;

  @include title-block-medium-and-small {
    margin: 0 $title-block-margin-width-on-medium-and-small;
  }
}

.titleRowInner {
  @extend %titleBlockInner;
}

.rowBelowSeparatorInner {
  @extend %titleBlockInner;
}

.titleRowInnerContent {
  position: relative;
  display: flex;
  width: 100%;
  align-items: center;
  height: $ca-grid * 3.5;
  justify-content: space-between;
  border-bottom: $title-block-separator-height solid rgba($kz-color-white, 0.1);

  .educationVariant & {
    border-bottom-color: rgba($kz-color-wisteria-700, 0.2);
  }

  .adminVariant & {
    border-bottom-color: transparent;
  }

  @include title-block-medium-and-small {
    border-bottom: none;
    height: $ca-grid * 2.5;
  }
}

.title {
  display: flex;
  align-items: center;
  max-width: 724px;

  .hasLongTitle.hasLongSubtitle & {
    @include title-block-under-1645 {
      max-width: 520px;
    }

    @include title-block-under-1366 {
      max-width: 50vw;
    }

    @media (max-width: 899px) {
      max-width: 44vw;
    }

    @include title-block-small {
      max-width: 83vw;
    }
  }

  @include title-block-under-1645 {
    max-width: 44vw;
  }

  @include title-block-under-1366 {
    max-width: 42vw;
  }

  @include title-block-small {
    max-width: 83vw;
  }

  .hasLongTitle.hasNoPrimaryOrDefaultAction & {
    max-width: 99%;
  }
}

.titleAndSubtitle {
  display: flex;
  align-items: center;

  .hasSubtitle & {
    @include title-block-under-1366 {
      transform: translateY(-0.38333em);
    }
  }
  transform: translateY(-0.0833333em);
}

.titleAndSubtitleInner {
  display: flex;

  .hasSubtitle.hasLongTitle.hasLongSubtitle & {
    align-items: center;

    @include title-block-under-1366 {
      align-items: baseline;
    }
  }

  .hasSubtitle & {
    align-items: baseline;
    overflow: hidden;

    @include title-block-under-1366 {
      align-items: normal;
      flex-direction: column;
      justify-content: space-between;
      transform: translateY($ca-grid / 3);

      .hasLongTitle.hasLongSubtitle & {
        align-items: baseline;
      }
    }

    @include title-block-medium-and-small {
      transform: translateY($ca-grid / 2);
    }
  }
}

.titleTextOverride.titleTextOverride {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  padding: 4px 0;

  @media (max-width: $breadcrumb-breakpoint-width) {
    font-family: $kz-typography-heading-2-font-family;
    font-weight: $kz-typography-heading-2-font-weight;
    font-size: $kz-typography-heading-2-font-size;
    line-height: $kz-typography-heading-2-line-height;
    letter-spacing: $kz-typography-heading-2-letter-spacing;
  }
  @include title-block-under-1366 {
    font-family: $kz-typography-heading-2-font-family;
    font-weight: $kz-typography-heading-2-font-weight;
    font-size: $kz-typography-heading-2-font-size;
    line-height: $kz-typography-heading-2-line-height;
    letter-spacing: $kz-typography-heading-2-letter-spacing;
    padding: 2px 0;
  }
  .hasLongTitle & {
    @include title-block-under-1366 {
      font-family: $kz-typography-heading-3-font-family;
      font-weight: $kz-typography-heading-3-font-weight;
      font-size: $kz-typography-heading-3-font-size;
      line-height: $kz-typography-heading-3-line-height;
      letter-spacing: $kz-typography-heading-3-letter-spacing;
      padding: 2px 0;
    }
  }

  @include title-block-medium-and-small {
    font-family: $kz-typography-heading-4-font-family;
    font-weight: $kz-typography-heading-4-font-weight;
    font-size: $kz-typography-heading-4-font-size;
    line-height: $kz-typography-heading-4-line-height;
    letter-spacing: $kz-typography-heading-4-letter-spacing;
    padding: 0;
  }
}

.avatar {
  display: none;
  box-sizing: border-box;
  border: 3px solid $kz-color-white;
  border-radius: 50%;
  overflow: hidden;
  height: $ca-grid * 2;
  width: $ca-grid * 2;
  @include ca-margin($end: $ca-grid / 2);

  > * {
    max-width: 100%;
  }

  @media (min-width: $kz-layout-breakpoints-large) {
    display: block;
  }

  .hasSubtitle.hasAvatar & {
    @include title-block-under-1366 {
      transform: translateY(10px);
    }
  }

  .hasLongTitle & {
    display: none;
  }
}
/* ... */

